# uwu_wiki

./: ARCHITECTURE.md  Cargo.toml
crates/wiki-collab/: Cargo.toml  README.md
crates/wiki-collab/src/: sync.rs
crates/wiki-core/: Cargo.toml
crates/wiki-core/src/: block.rs  config.rs  doc.rs  error.rs  lib.rs  link.rs  markdown.rs  registry.rs  space.rs  storage.rs  utils.rs  validate.rs
crates/wiki-graph/: Cargo.toml
crates/wiki-graph/src/: layout.rs  lib.rs
crates/wiki-llm/: Cargo.toml  README.md
crates/wiki-llm/src/: embed.rs  engine.rs  lib.rs  rag.rs  retry.rs
crates/wiki-table/: Cargo.toml
crates/wiki-testkit/: Cargo.toml
crates/wiki-testkit/src/: lib.rs
crates/wiki-workflow/: Cargo.toml  README.md
crates/wiki-workflow/src/: ingest.rs  lib.rs  lint.rs  query.rs
docs/: edit.md
wiki-collab/: Cargo.toml
wiki-collab/src/: lib.rs
wiki-core/: README.md
wiki-core/src/: block.rs  doc.rs  registry.rs  storage.rs
wiki-graph/: README.md
wiki-llm/: Cargo.toml
wiki-llm/src/: engine.rs  lib.rs  mock.rs  rag.rs
wiki-table/: README.md
wiki-table/src/: lib.rs
wiki-testkit/: README.md
wiki-testkit/src/: lib.rs
wiki-workflow/: Cargo.toml
wiki-workflow/src/: lint.rs
