[workspace]
members = [
    "crates/wiki-core",
    "crates/wiki-llm",
    "crates/wiki-table",
    "crates/wiki-graph",
    "crates/wiki-collab",
    "crates/wiki-workflow",
    "crates/wiki-testkit",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros"] }
parking_lot = "0.12"
