[package]
name = "wiki-collab"
version = "0.0.0"
edition = "2024"
description = "uwu_wiki 协作层：CRDT 合并 + 权限控制（PermissionFilter 实现）"

[dependencies]
wiki-core = { path = "../wiki-core" }
uwu-crdt = { git = "https://github.com/StLuFa/uwu-crdt.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

[features]
default = []

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
