[package]
name = "wiki-collab"
version = "0.0.0"
edition = "2024"
description = "uwu_wiki 协作层：Op → CRDT 翻译 + CollabDoc"

[dependencies]
wiki-core = { path = "../wiki-core" }
uwu-crdt.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio.workspace = true
