[package]
name = "wiki-core"
version = "0.0.0"
edition = "2024"
description = "uwu_wiki 核心：基于 markdown-rs 的 Block 引擎 + Document/Op 模型 + 全部存储端口 trait"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
markdown.workspace = true
serde_yaml = "0.9"
blake3 = "1"

[dev-dependencies]
wiki-testkit = { path = "../wiki-testkit" }
tokio.workspace = true
