[package]
name = "wiki-graph"
version = "0.0.0"
edition = "2024"
description = "uwu_wiki 智能图：流程图/思维导图节点模型"

[dependencies]
wiki-core = { path = "../wiki-core" }
wiki-llm = { path = "../wiki-llm" }
serde.workspace = true
rand.workspace = true

[features]
default = []
llm = []
llm-qa = []
export = []
