[package]
name = "wiki-llm"
version = "0.0.0"
edition = "2024"
description = "uwu_wiki LLM 横切层：LlmClient trait + TextUnit + RAG"

[dependencies]
wiki-core = { path = "../wiki-core" }
wiki-collab = { path = "../wiki-collab" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true

[features]
default = []
hybrid-search = []
full-text = []
test-utils = []

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
wiki-testkit = { path = "../wiki-testkit" }
