[package]
name = "wiki-table"
version = "0.0.0"
edition = "2024"
description = "uwu_wiki 智能表格：Schema/Row/View 模型"

[dependencies]
wiki-core = { path = "../wiki-core" }
wiki-llm = { path = "../wiki-llm" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[features]
default = []
formula = []
llm-fill = []

[dev-dependencies]
tokio.workspace = true
