[package]
name = "wiki-testkit"
version = "0.0.0"
edition = "2024"
description = "uwu_wiki 参考内存实现：全部存储端口的内存版"

[dependencies]
wiki-core = { path = "../wiki-core" }
async-trait.workspace = true
serde_json.workspace = true
chrono.workspace = true
parking_lot.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
