[package]
name = "wiki-workflow"
version = "0.0.0"
edition = "2024"
description = "uwu_wiki LLM 工作流：Ingest / Query / Lint 管线（依赖 wiki-core + wiki-llm 端口）"

[dependencies]
wiki-core = { path = "../wiki-core" }
wiki-llm = { path = "../wiki-llm" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
tracing = "0.1"

[features]
default = []

[dev-dependencies]
wiki-llm = { path = "../wiki-llm", features = ["test-utils"] }
tokio = { version = "1", features = ["rt", "macros"] }
wiki-testkit = { path = "../wiki-testkit" }
