[package]
name = "wiki-workflow"
version = "0.0.0"
edition = "2024"
description = "uwu_wiki 工作流引擎 — stub，待基于新 API 重写"

[dependencies]
wiki-core = { path = "../wiki-core" }
wiki-llm = { path = "../wiki-llm" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["rt", "time", "sync", "macros"] }
tracing.workspace = true

[dev-dependencies]
wiki-llm = { path = "../wiki-llm", features = ["test-utils"] }
tokio.workspace = true
wiki-testkit = { path = "../wiki-testkit" }
